// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HoC: withJarb errorMode: tooltip: withJarb => errorMode: tooltip => formError 1`] = `
<div
  className="withjarb-tooltip"
>
  <FormFeedback
    key=""
    tag="div"
  />
</div>
`;

exports[`HoC: withJarb errorMode: tooltip: withJarb => errorMode: tooltip => jarbField 1`] = `
<ForwardRef(TippyWrapper)
  boundary="viewport"
  className="border-0"
  content={
    <React.Fragment>
       
      <Field
        name="firstName"
        render={[Function]}
        subscription={
          Object {
            "active": true,
            "error": true,
            "touched": true,
            "validating": true,
            "value": true,
          }
        }
      />
       
    </React.Fragment>
  }
  distance={7}
  maxWidth={350}
  placement="bottom"
>
  <div
    className="w-100"
    style={
      Object {
        "outline": 0,
      }
    }
    tabIndex={0}
  >
    <Input
      color=""
      onBlur={[MockFunction]}
      onChange={[Function]}
      value="value"
    />
  </div>
</ForwardRef(TippyWrapper)>
`;

exports[`HoC: withJarb should throw an error when detecting illegal props 1`] = `
"
        withJarb: illegal props detected on \\"JarbInput\\".
        
        The following illegal props were detected: 'onChange' and 'value'.
        
        This happens when providing one or multiple of the following 
        managed props: 'onChange', 'onBlur', 'onFocus', 'value', 'color', 'valid' or 'error' manually. 
        
        You should never provide these props manually instead you should
        trust that \\"withJarb\\" will manage these props for you.

        Remove the following illegal props: 'onChange' and 'value'.
      "
`;

exports[`HoC: withJarb ui: withJarb => ui => formError 1`] = `
<div>
  <FormFeedback
    key=""
    tag="div"
  />
</div>
`;

exports[`HoC: withJarb ui: withJarb => ui => jarbField 1`] = `
<input
  color=""
  error={
    <Field
      name="firstName"
      render={[Function]}
      subscription={
        Object {
          "active": true,
          "error": true,
          "touched": true,
          "validating": true,
          "value": true,
        }
      }
    />
  }
  id="firstName"
  label="First name"
  onBlur={[MockFunction]}
  onChange={[Function]}
  placeholder="Please enter your first name"
  value="value"
/>
`;

exports[`HoC: withJarb ui: withJarb => ui 1`] = `
<JarbField
  asyncValidators={
    Array [
      [Function],
    ]
  }
  asyncValidatorsDebounce={5000}
  format={[Function]}
  formatOnBlur={false}
  initialValue="beheer@42.nl"
  jarb={
    Object {
      "label": "First name",
      "validator": "User.email",
    }
  }
  name="firstName"
  parse={[Function]}
  render={[Function]}
  subscription={
    Object {
      "invalid": true,
      "touched": true,
      "validating": true,
      "value": true,
    }
  }
  validators={
    Array [
      [Function],
    ]
  }
/>
`;
